--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -46,7 +46,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d05d39b0733743ab8a8617eb41824647",
+       "model_id": "bcc26e0fe9214162b1cb3f8cb55508e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -85,9 +85,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6632a9d724074d2c8d9bc897c5eacfa9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Height', layout=Layout(width='128px')), IntSlider(value=240, max=1280, min=128, ste…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d9b4ee0920ad4bdfa3b9dc5640778e5b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Point size', layout=Layout(width='128px')), IntSlider(value=4, max=10, min=1)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "53ac308e9473445a81a5ef6ac1f65b33",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Point opacity', layout=Layout(width='128px')), FloatSlider(value=1.0, max=1.0, step…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7baf2b72031d4f6fb70cfd005df5697d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Color by', layout=Layout(width='128px')), RadioButtons(options=(('Point color', 'no…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a2ac09ac0d0f4e26addd457db9c3b710",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Colormap', layout=Layout(width='128px')), Combobox(value='', disabled=True, ensure_…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9292401463e24939b3262aae34d73d42",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Point color', layout=Layout(width='128px')), ColorPicker(value='#a8a8a8')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e248fe740e734a11a4e1120bfaf544af",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Point color active', layout=Layout(width='128px')), ColorPicker(value='#008cff')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "22ae19c924474285ade86828eec47786",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Point color hover', layout=Layout(width='128px')), ColorPicker(value='#000000')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4200312bcd174225bd5d7e7dfee03868",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Point outline width', layout=Layout(width='128px')), IntSlider(value=2, max=8)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "56a9d260e8914d49a1228578a69b6a3f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Point size selected', layout=Layout(width='128px')), IntSlider(value=2, max=8)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e671269d184c41d5bfe78c4db2d4dcd9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Lasso color', layout=Layout(width='128px')), ColorPicker(value='#000000')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "337e860dda704f6cbf77f84807647191",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Recticle color', layout=Layout(width='128px')), ColorPicker(value='#008cff')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6eb184cb329c49abb680b154bae4ff62",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Show recticle', layout=Layout(width='128px')), Checkbox(value=False, indent=False))…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "271cabcabf6d4f08ada813174ab208e8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Background color', layout=Layout(width='128px')), ColorPicker(value='#ffffff')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9f25c423bec040c8b548864e82be149f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Background image', layout=Layout(width='128px')), FileUpload(value={}, accept='imag…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "widget.display_options()"
    ]
@@ -118,9 +329,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a4f069334027404c93bca55a4f390266",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Point size', layout=Layout(width='128px')), IntSlider(value=4, max=10, min=1)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "widget.point_size_widget"
    ]
@@ -152,13 +378,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8da3f7fd32e541e0a63e7252be5d936e",
+       "model_id": "5173e8f648e34195844a469ceebe71e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -172,7 +398,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6602ac62f1e4584822cb2f9614fe416",
+       "model_id": "c755637ba3f54b06b9a38f3959bb39f2",
        "version_major": 2,
        "version_minor": 0
       },
