Rename to jscatter and update to Jupyter Lab v3

--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -2,15 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
     "import numpy as np\n",
-    "import scatterplot\n",
+    "import jscatter\n",
     "\n",
     "from IPython.display import display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 1, 0, 'final', 1)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jscatter.version_info"
    ]
   },
   {
@@ -22,36 +42,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "points = np.random.rand(500, 2) # x,y position\n",
-    "values = np.random.rand(500) # an associated numerical value\n",
-    "categories = (np.random.rand(500) * 10).astype(np.uint8) # an associated categorical value"
+    "points = np.random.rand(500, 2)\n",
+    "\n",
+    "# optional associated numerical values\n",
+    "values = np.random.rand(500)\n",
+    "\n",
+    "# optional associated categorical values\n",
+    "categories = (np.random.rand(500) * 10).astype(np.uint8)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then we create the widget using the scatterplot's `display()` function."
+    "Then we create the widget using the scatterplot's `plot()` function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bcc26e0fe9214162b1cb3f8cb55508e7",
+       "model_id": "c34971cfa4a44c64b2588791c41b9084",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Scatterplot(background_color=[1, 1, 1, 1], camera_distance=1.0, camera_target=[0, 0], height=240, lasso_color=…"
+       "JScatter(background_color=[1, 1, 1, 1], camera_distance=1.0, camera_target=[0, 0], height=240, lasso_color=[0,…"
       ]
      },
      "metadata": {},
@@ -59,8 +83,8 @@
     }
    ],
    "source": [
-    "widget = scatterplot.display(points, values=values, categories=categories)\n",
-    "widget"
+    "scatterplot = jscatter.plot(points, values=values, categories=categories)\n",
+    "scatterplot"
    ]
   },
   {
@@ -71,10 +95,10 @@
     "\n",
     "- **Pan**: Click and drag your mouse.\n",
     "- **Zoom**: Scroll vertically.\n",
-    "- **Rotate**: While pressing <kbd>ALT</kbd>, click and drag your mouse.\n",
     "- **Select a single dot**: Click on a dot with your mouse.\n",
     "- **Select multiple dots**: While pressing <kbd>SHIFT</kbd>, click and drag your mouse. All items within the lasso will be selected.\n",
     "- **Deselect**: Double-click onto an empty region.\n",
+    "- **Rotate**: While pressing <kbd>ALT</kbd>, click and drag your mouse.\n",
     "\n",
     "All interactions are reflected in the widget's model. And except for `hovered_point`, all properties can be adjusted in both ways.\n",
     "\n",
@@ -85,13 +109,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6632a9d724074d2c8d9bc897c5eacfa9",
+       "model_id": "4eb05612c5fd4847aa181bf19ce33e19",
        "version_major": 2,
        "version_minor": 0
       },
@@ -105,7 +129,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9b4ee0920ad4bdfa3b9dc5640778e5b",
+       "model_id": "a9a9aa5f2fd043eba1808be8d4516872",
        "version_major": 2,
        "version_minor": 0
       },
@@ -119,7 +143,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53ac308e9473445a81a5ef6ac1f65b33",
+       "model_id": "70887c5e102548d284253cbe5bb56f63",
        "version_major": 2,
        "version_minor": 0
       },
@@ -133,7 +157,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7baf2b72031d4f6fb70cfd005df5697d",
+       "model_id": "015429e7742c47bf892b8a1df2f4f847",
        "version_major": 2,
        "version_minor": 0
       },
@@ -147,7 +171,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2ac09ac0d0f4e26addd457db9c3b710",
+       "model_id": "9e4fecf9f37b4a4cada83c414cd64958",
        "version_major": 2,
        "version_minor": 0
       },
@@ -161,7 +185,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9292401463e24939b3262aae34d73d42",
+       "model_id": "9d392f26066240cb9cf2a6c0cedd715c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -175,7 +199,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e248fe740e734a11a4e1120bfaf544af",
+       "model_id": "c4402761868845e7be0579ccf1fc6694",
        "version_major": 2,
        "version_minor": 0
       },
@@ -189,7 +213,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22ae19c924474285ade86828eec47786",
+       "model_id": "1d5ba61baf4645fb93926cc54d10d50e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,7 +227,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4200312bcd174225bd5d7e7dfee03868",
+       "model_id": "9bf7080eeaac4153973920d3fc13ac53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -217,7 +241,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56a9d260e8914d49a1228578a69b6a3f",
+       "model_id": "d177e3ac2c0b44968361338782079084",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +255,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e671269d184c41d5bfe78c4db2d4dcd9",
+       "model_id": "7619d53dd16045918b47712de9ecabf7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,7 +269,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "337e860dda704f6cbf77f84807647191",
+       "model_id": "9c3176cd993c4736b5886e792860c1fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -259,7 +283,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6eb184cb329c49abb680b154bae4ff62",
+       "model_id": "afb2fca70dca44c39d904c8e6419d6d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -273,7 +297,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "271cabcabf6d4f08ada813174ab208e8",
+       "model_id": "3bb49c29e76a49ec9d842270311bacc3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -287,7 +311,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f25c423bec040c8b548864e82be149f",
+       "model_id": "73fa47f97a3c4e95a71f3f4b6fa24768",
        "version_major": 2,
        "version_minor": 0
       },
@@ -300,14 +324,14 @@
     }
    ],
    "source": [
-    "widget.display_options()"
+    "scatterplot.options()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Of course, it's also possible to only display a single widget. Just append `_widget` to any of the option properties:\n",
+    "It's also possible to show a single UI widget. Just append `_widget` to any of the option properties:\n",
     "\n",
     "- `background_color`\n",
     "- `background_image`\n",
@@ -329,26 +353,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4f069334027404c93bca55a4f390266",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Point size', layout=Layout(width='128px')), IntSlider(value=4, max=10, min=1)))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "widget.point_size_widget"
+    "scatterplot.point_size_widget"
    ]
   },
   {
@@ -362,11 +371,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "widget.selected_points = list(range(12))"
+    "scatterplot.selected_points = list(range(12))"
    ]
   },
   {
@@ -378,13 +387,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5173e8f648e34195844a469ceebe71e1",
+       "model_id": "6c7774ed6a7e43e39d3aad039402dc61",
        "version_major": 2,
        "version_minor": 0
       },
@@ -398,12 +407,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c755637ba3f54b06b9a38f3959bb39f2",
+       "model_id": "3f1abc8e36c4483798570799061dd048",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value='Selected points', layout=Layout(width='128px')), Textarea(value='0, 1, 2, 3, 4, 5, …"
+       "HBox(children=(HTML(value='Selected points', layout=Layout(width='128px')), Textarea(value='383', disabled=Tru…"
       ]
      },
      "metadata": {},
@@ -411,7 +420,7 @@
     }
    ],
    "source": [
-    "display(widget.hovered_point_widget, widget.selected_points_widget)"
+    "display(scatterplot.hovered_point_widget, scatterplot.selected_points_widget)"
    ]
   },
   {
@@ -438,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
