--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,26 +14,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0, 1, 0, 'final', 1)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "jscatter.version_info"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -42,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,27 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c34971cfa4a44c64b2588791c41b9084",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "JScatter(background_color=[1, 1, 1, 1], camera_distance=1.0, camera_target=[0, 0], height=240, lasso_color=[0,…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "scatterplot = jscatter.plot(points, values=values, categories=categories)\n",
-    "scatterplot"
+    "scatterplot = jscatter.plot(points, point_size=10, values=values, categories=categories)\n",
+    "scatterplot.show()"
    ]
   },
   {
@@ -102,227 +67,72 @@
     "\n",
     "All interactions are reflected in the widget's model. And except for `hovered_point`, all properties can be adjusted in both ways.\n",
     "\n",
-    "## Interactively Adjustements\n",
+    "## Options\n",
     "\n",
-    "To streamline adjusting visual properties you can use `widget.display_options()`."
+    "jscatter lets you adjust the scatter plots to your needs by exposing the following options:\n",
+    "\n",
+    "**Data:**\n",
+    "\n",
+    "- `points` [list]\n",
+    "- `selected_points` [list]\n",
+    "- `hovered_point` [int] (read only)\n",
+    "\n",
+    "**Camera:**\n",
+    "\n",
+    "- `camera_target` [tuple]\n",
+    "- `camera_distance` [float]\n",
+    "- `camera_rotation` [float]\n",
+    "- `camera_view` [list]\n",
+    "\n",
+    "**Visual:**\n",
+    "\n",
+    "- `color_by` [None, 'category', or 'value']\n",
+    "- `height` [int]\n",
+    "- `background_color` [string|quadruple]\n",
+    "- `background_image` [string]\n",
+    "- `lasso_color` [string|quadruple]\n",
+    "- `lasso_min_delay` [int]\n",
+    "- `lasso_min_dist` [float]\n",
+    "- `point_color` [string|quadruple]\n",
+    "- `point_color_active` [string|quadruple]\n",
+    "- `point_color_hover` [string|quadruple]\n",
+    "- `point_opacity` [float]\n",
+    "- `point_size` [int]\n",
+    "- `point_size_selected` [int]\n",
+    "- `point_outline_width` [int]\n",
+    "- `show_recticle` [bool]\n",
+    "- `recticle_color` [string|quadruple]\n",
+    "\n",
+    "**Other:**\n",
+    "\n",
+    "- `other_options` [dict]: for all other properties understood by [regl-scatterplot](https://github.com/flekschas/regl-scatterplot#scatterplot.set)\n",
+    "\n",
+    "For instance, the following call will activate the recticle that is being shown upon hovering a dot in the plot above:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4eb05612c5fd4847aa181bf19ce33e19",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Height', layout=Layout(width='128px')), IntSlider(value=240, max=1280, min=128, ste…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9a9aa5f2fd043eba1808be8d4516872",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Point size', layout=Layout(width='128px')), IntSlider(value=4, max=10, min=1)))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70887c5e102548d284253cbe5bb56f63",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Point opacity', layout=Layout(width='128px')), FloatSlider(value=1.0, max=1.0, step…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "015429e7742c47bf892b8a1df2f4f847",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Color by', layout=Layout(width='128px')), RadioButtons(options=(('Point color', 'no…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e4fecf9f37b4a4cada83c414cd64958",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Colormap', layout=Layout(width='128px')), Combobox(value='', disabled=True, ensure_…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d392f26066240cb9cf2a6c0cedd715c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Point color', layout=Layout(width='128px')), ColorPicker(value='#a8a8a8')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4402761868845e7be0579ccf1fc6694",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Point color active', layout=Layout(width='128px')), ColorPicker(value='#008cff')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d5ba61baf4645fb93926cc54d10d50e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Point color hover', layout=Layout(width='128px')), ColorPicker(value='#000000')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bf7080eeaac4153973920d3fc13ac53",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Point outline width', layout=Layout(width='128px')), IntSlider(value=2, max=8)))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d177e3ac2c0b44968361338782079084",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Point size selected', layout=Layout(width='128px')), IntSlider(value=2, max=8)))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7619d53dd16045918b47712de9ecabf7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Lasso color', layout=Layout(width='128px')), ColorPicker(value='#000000')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c3176cd993c4736b5886e792860c1fe",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Recticle color', layout=Layout(width='128px')), ColorPicker(value='#008cff')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "afb2fca70dca44c39d904c8e6419d6d8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Show recticle', layout=Layout(width='128px')), Checkbox(value=False, indent=False))…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3bb49c29e76a49ec9d842270311bacc3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Background color', layout=Layout(width='128px')), ColorPicker(value='#ffffff')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73fa47f97a3c4e95a71f3f4b6fa24768",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Background image', layout=Layout(width='128px')), FileUpload(value={}, accept='imag…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "scatterplot.show_recticle = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interactively Adjusting Options\n",
+    "\n",
+    "To streamline adjusting visual options you can use `scatterplot.options()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "scatterplot.options()"
    ]
@@ -331,24 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's also possible to show a single UI widget. Just append `_widget` to any of the option properties:\n",
-    "\n",
-    "- `background_color`\n",
-    "- `background_image`\n",
-    "- `color_by`\n",
-    "- `height`\n",
-    "- `lasso_color`\n",
-    "- `point_color_active`\n",
-    "- `point_color_hover`\n",
-    "- `point_color`\n",
-    "- `point_opacity`\n",
-    "- `point_outline_width`\n",
-    "- `point_size_selected`\n",
-    "- `point_size`\n",
-    "- `recticle_color`\n",
-    "- `show_recticle`\n",
-    "\n",
-    "For instance:"
+    "It's also possible to display a individual UI widgets. Simply append `_widget` to any of the options mentioned above. For instance:"
    ]
   },
   {
@@ -387,38 +180,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c7774ed6a7e43e39d3aad039402dc61",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Hovered point', layout=Layout(width='128px')), Text(value='None', disabled=True, pl…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f1abc8e36c4483798570799061dd048",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Selected points', layout=Layout(width='128px')), Textarea(value='383', disabled=Tru…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(scatterplot.hovered_point_widget, scatterplot.selected_points_widget)"
    ]
