--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -26,13 +26,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "points = np.random.rand(500, 2)\n",
+    "n = 500\n",
     "\n",
-    "# optional associated numerical values\n",
-    "values = np.random.rand(500)\n",
+    "points = np.random.rand(n, 2)\n",
     "\n",
-    "# optional associated categorical values\n",
-    "categories = (np.random.rand(500) * 10).astype(np.uint8)"
+    "# optional continuous values associated to the points\n",
+    "values = np.random.rand(n)\n",
+    "\n",
+    "# optional: categories associated to the points\n",
+    "categories = (np.random.rand(n) * 10).astype(int)"
    ]
   },
   {
@@ -48,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scatterplot = jscatter.plot(points, point_size=10, values=values, categories=categories)\n",
+    "scatterplot = jscatter.plot(points, categories, values)\n",
     "scatterplot.show()"
    ]
   },
@@ -56,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The scatterplot is interactive! It supports pan-and-zoom, hover, click, and lasso interactions:\n",
+    "The scatter plot is interactive! It supports pan-and-zoom, hover, click, and lasso interactions:\n",
     "\n",
     "- **Pan**: Click and drag your mouse.\n",
     "- **Zoom**: Scroll vertically.\n",
@@ -65,11 +67,13 @@
     "- **Deselect**: Double-click onto an empty region.\n",
     "- **Rotate**: While pressing <kbd>ALT</kbd>, click and drag your mouse.\n",
     "\n",
-    "All interactions are reflected in the widget's model. And except for `hovered_point`, all properties can be adjusted in both ways.\n",
+    "The best part, the point selection is reflected in `scatterplot.selected_points`. And you can even adjusted the selection in both ways!\n",
     "\n",
-    "## Options\n",
+    "The selection isn't of course not the only thing you can adjust so keep reading!\n",
     "\n",
-    "jscatter lets you adjust the scatter plots to your needs by exposing the following options:\n",
+    "## Properties\n",
+    "\n",
+    "You can adjust the scatter plot to your needs by adjusting the following properties:\n",
     "\n",
     "**Data:**\n",
     "\n",
@@ -103,7 +107,7 @@
     "- `show_recticle` [bool]\n",
     "- `recticle_color` [string|quadruple]\n",
     "\n",
-    "**Other:**\n",
+    "**Other Options:**\n",
     "\n",
     "- `other_options` [dict]: for all other properties understood by [regl-scatterplot](https://github.com/flekschas/regl-scatterplot#scatterplot.set)\n",
     "\n",
@@ -159,7 +163,7 @@
    "source": [
     "## Select Points\n",
     "\n",
-    "You can select points interactively using mouse click and lasso interactions as described above or you can programmatically select points. `widget.selected_points` is a list of point indices. For example, to select the first 10 points we can do:"
+    "You can select points interactively using mouse click and lasso interactions as described above or you can programmatically select points. `scatterplot.selected_points` is a list of point indices. For example, to select the first 10 points we can do:"
    ]
   },
   {
